# MusicPlayer

./: README.md
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/darren/music/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DZAudio.cpp  DZAudio.h  DZConstDefine.h  DZFFmpeg.cpp  DZFFmpeg.h  DZJNICall.cpp  DZJNICall.h  DZPacketQueue.cpp  DZPacketQueue.h  DZPlayerStatus.cpp  DZPlayerStatus.h  music-player.cpp  native-lib.cpp
app/src/main/java/com/darren/media/: DarrenPlayer.java
app/src/main/java/com/darren/media/listener/: MediaErrorListener.java  MediaPreparedListener.java
app/src/main/java/com/darren/music/player/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/darren/music/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
